# tau_crystal

./: --out  .ci-ping  .ci-ping.md  .ci-smoke.txt  .ci_ping  .ci_probe_root  .env.runtime  .gitattributes  .gitignore  .gitignore.bak_20250919_042109  .pages_stamp  .py311_constraints.txt  .py311_constraints_pins.txt  .py311_import_probe.py  .repo_tree__TauProofs.txt  .repo_tree___github_workflows.txt  .repo_tree__analysis.txt  .repo_tree__docs.txt  .repo_tree__scripts.txt  .runs.json  .tau_plan_roots.env  .tmp.15mods.missing  .tmp.15mods.receipt.path  .tmp.witness_scores.28894  A.npy  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ramanujan  FACE.txt  FusionMain.lean  LEAN_ACTIVE.txt  LEAN_TOOLCHAINS.txt  LICENSE  LLM_START_HERE.txt  Main.lean  Main.lean.bak_20250902_223733  Main2.lean  Main2.lean.bak.1756906471  Main2.lean.bak_20250902_223733  (+55 more)
.artifact_tmp/: receipt.json
.cacbe/: attention.tsv
.cache/: _reflect_inputs.json  attr_add  cheby_example.json  daily_20250923_858.tmp  daily_20250925_752.tmp  daily_20250926_1279.tmp  daily_20250926_1386.tmp  daily_20250926_699.tmp  guard_all.stdout  patch_angle10_glob.py  patch_angle10_inputs_norm.py  patch_angle10_posix.py  patch_angle10_utc.py  qs_chunk2.sh  state_20250929T034553Z_ce6b47f71598.files  wc_A_14070.tsv  wc_A_14485.tsv
.ci/: heredoc.allow
.config/: nextest.toml
.exec_geom/: symbol.conf
.github/: .primer  CODEOWNERS  ci.env  dependabot.yml
.rescue/: status.20250912-231836.txt
.secrets/: morpho_raw_20250919_044619.tar.enc  (+1 more)
.snap/: .gitignore
tools/offline_verifier/: Cargo.toml
(+2871 files in other folders)
