[package]
name = "tau_verify"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
thiserror = { version = "1.0", default-features = false }
